--- a/n-commodore.cfg
+++ b/n-commodore.cfg
@@ -7,7 +7,7 @@ zui::bindkey F4 cmd-exec-prompt
 zui::bindkey F5 cmd-search-prompt
 # Strictly preview view
 zui::bindkey F14 cmd-toggle-view preview
-zui::bindkey $'\C-e' cmd-toggle-view history
+zui::bindkey $'\C-e' cmd-set-view hist
 zui::bindkey F16 cmd-open-tig
 #zui::bindkey F5 cmd-commit
 #zui::bindkey F17 cmd-commit -av
