--- a/n-commodore.cfg
+++ b/n-commodore.cfg
@@ -19,3 +19,8 @@ zui::bindkey F304 cmd-prev-hist
 zui::bindkey F263 cmd-next-hist
 zui::bindkey $'\C-u' cmd-pwd-up
 zui::bindkey $'\C-d' cmd-cd ~/github/z
+zui::bindkey SRIGHT cmd-cursor-right
+zui::bindkey SLEFT cmd-cursor-left
+zui::bindkey F283 cmd-cursor-word-left
+zui::bindkey F298 cmd-cursor-word-right
+ 
