--- a/n-commodore.rc
+++ b/n-commodore.rc
@@ -1,5 +1,6 @@
 #!/usr/bin/env zsh
 
+NC_DEFAULT_LS_COMMAND="command ls --color=always %s|ok/qcolreduce -o"
 zui::bindkey F1 cmd-main-view
 zui::bindkey F2 cmd-contents-view
 zui::bindkey F3 cmd-command-history-view
