--- a/n-commodore.rc
+++ b/n-commodore.rc
@@ -21,9 +21,12 @@ zui::bindkey F8 cmd-synh-switch
 #zui::bindkey F15 cmd-stage-line
 zui::bindkey F304 cmd-prev-hist
 zui::bindkey F263 cmd-next-hist
+zui::bindkey $'\C-w' cmd-show-stdin
 zui::bindkey $'\C-u' cmd-pwd-up
 zui::bindkey F305 cmd-pwd-up
+zui::bindkey SR cmd-pwd-up
 zui::bindkey F264 cmd-prev-pwd
+zui::bindkey SF cmd-prev-pwd
 zui::bindkey $'\C-d' cmd-cd ~/github/z
 zui::bindkey SRIGHT cmd-cursor-right
 zui::bindkey SLEFT cmd-cursor-left
