--- a/n-commodore.rc
+++ b/n-commodore.rc
@@ -7,7 +7,7 @@
 alias rg="rg --color=always --line-number"
 alias ag="ag --color --numbers"
 alias bat="bat --color=always"
-greptxt="grep -E -H -sn -T -I --color=always\
+greptxt="grep -E -H -sn   -I --color=always\
     --exclude-dir=.git\\* --exclude TAGS --exclude=.TAGS.z --exclude=\\*.log\
     --exclude=\\*.patch --exclude=\\*.diff -D skip -d recurse"
 [[ -f .gitignore ]]&&greptxt+=" --exclude-from=.gitignore"
@@ -15,6 +15,7 @@ greptxt="grep -E -H -sn -T -I --color=always\
 alias grep=$greptxt
 alias qe=$greptxt
 alias gitg="git grep -I -i -E --color=always --threads=7 -n -e"
+
 #
 # Some hopefully useful hashed dirs. Use in command line, e.g.: cd ~start
 #
@@ -50,6 +51,7 @@ zui::bindkey F2 cmd-contents-view
 zui::bindkey F3 cmd-command-history-view
 zui::bindkey $'\C-w' cmd-tags-view
 zui::bindkey $'\C-_' cmd-toggle-prompt
+zui::bindkey $'\C-@' cmd-jump
 
 # Strictly preview view
 zui::bindkey $'\C-e' cmd-set-view hist
